--- a/app/src/main/res/layout/dialog_add_edit_villa.xml
+++ b/app/src/main/res/layout/dialog_add_edit_villa.xml
@@ -1,119 +1,235 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<eightbitlab.com.blurview.BlurView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:background="@drawable/background_window"
+    android:id="@+id/blur_window"
     android:padding="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <EditText
-            android:id="@+id/etVillaNo"
-            android:layout_width="0dp"
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Villa Numarası"
-            android:inputType="number"
-            android:minEms="5"
+            android:id="@+id/windowTitle"
+            android:text="Villa Ekle"
+            android:textColor="@color/white"
+            android:textSize="24sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            android:layout_marginStart="10dp"/>
 
-        <EditText
-            android:id="@+id/etVillaNotes"
-            android:layout_width="0dp"
+        <ScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Notlar"
-            android:inputType="textMultiLine"
-            android:lines="3"
-            android:gravity="top|start"
-            app:layout_constraintTop_toBottomOf="@+id/etVillaNo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+            app:layout_constraintTop_toBottomOf="@id/windowTitle"
+            app:layout_constraintBottom_toTopOf="@id/btnSave"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp">
 
-        <EditText
-            android:id="@+id/etVillaStreet"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="Sokak"
-            android:inputType="text"
-            app:layout_constraintTop_toBottomOf="@+id/etVillaNotes"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/etVillaNavigation"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:hint="Navigasyon Bilgisi"
-            android:inputType="text"
-            app:layout_constraintTop_toBottomOf="@+id/etVillaStreet"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+                <EditText
+                    android:id="@+id/etVillaNo"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Villa Numarası"
+                    android:textColorHint="@color/textColorSecondary"
+                    android:textColor="@color/white"
+                    android:inputType="number"
+                    android:minEms="5"
+                    android:background="@drawable/background_edittext"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
 
-        <CheckBox
-            android:id="@+id/cbIsUnderConstruction"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Villada Çalışma Var"
-            app:layout_constraintTop_toBottomOf="@+id/etVillaNavigation"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="16dp" />
+                <EditText
+                    android:id="@+id/etVillaNotes"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Notlar"
+                    android:textColorHint="@color/textColorSecondary"
+                    android:textColor="@color/white"
+                    android:inputType="textMultiLine"
+                    android:lines="3"
+                    android:gravity="top|start"
+                    android:background="@drawable/background_edittext"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/etVillaNo"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" />
 
-        <CheckBox
-            android:id="@+id/cbIsSpecial"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Özel Villa"
-            app:layout_constraintTop_toBottomOf="@+id/cbIsUnderConstruction"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+                <EditText
+                    android:id="@+id/etVillaStreet"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Sokak"
+                    android:textColorHint="@color/textColorSecondary"
+                    android:textColor="@color/white"
+                    android:inputType="text"
+                    android:background="@drawable/background_edittext"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/etVillaNotes"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" />
 
-        <CheckBox
-            android:id="@+id/cbIsRental"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Kiralık Villa"
-            app:layout_constraintTop_toBottomOf="@+id/cbIsSpecial"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+                <EditText
+                    android:id="@+id/etVillaNavigation"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:hint="Navigasyon Bilgisi"
+                    android:textColorHint="@color/textColorSecondary"
+                    android:textColor="@color/white"
+                    android:inputType="text"
+                    android:background="@drawable/background_edittext"
+                    android:paddingStart="10dp"
+                    android:paddingEnd="10dp"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    app:layout_constraintTop_toBottomOf="@+id/etVillaStreet"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" />
 
-        <CheckBox
-            android:id="@+id/cbIsCallFromHome"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Sadece Ev Telefonundan Ara"
-            app:layout_constraintTop_toBottomOf="@+id/cbIsRental"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+                <CheckBox
+                    android:id="@+id/cbIsUnderConstruction"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Villada Çalışma Var"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/etVillaNavigation"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="16dp" />
 
-        <CheckBox
-            android:id="@+id/cbIsCallForCargo"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:text="Kargo İçin Aranmasın"
-            app:layout_constraintTop_toBottomOf="@+id/cbIsCallFromHome"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+                <CheckBox
+                    android:id="@+id/cbIsSpecial"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Özel Villa"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/cbIsUnderConstruction"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" />
 
-        <CheckBox
-            android:id="@+id/cbIsEmpty"
-            android:layout_width="0dp"
+                <CheckBox
+                    android:id="@+id/cbIsRental"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Kiralık Villa"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/cbIsSpecial"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" />
+
+                <CheckBox
+                    android:id="@+id/cbIsCallFromHome"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Sadece Ev Telefonundan Ara"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/cbIsRental"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" />
+
+                <CheckBox
+                    android:id="@+id/cbIsCallForCargo"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Kargo İçin Aranmasın"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/cbIsCallFromHome"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" />
+
+                <CheckBox
+                    android:id="@+id/cbIsEmpty"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Boş Villa"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@+id/cbIsCallForCargo"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:layout_marginTop="8dp" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </ScrollView>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Boş Villa"
-            app:layout_constraintTop_toBottomOf="@+id/cbIsCallForCargo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="8dp" />
+            android:id="@+id/btnVillaContacts"
+            android:background="@drawable/background_blur"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <com.makeramen.roundedimageview.RoundedImageView
+                android:id="@+id/icVillaContacts"
+                android:layout_width="42dp"
+                android:layout_height="42dp"
+                android:src="@drawable/ic_person"
+                android:padding="7dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/titleVillaContacts"
+                android:text="Villa Sakinleri"
+                android:textColor="@color/white"
+                app:layout_constraintStart_toEndOf="@id/icVillaContacts"
+                app:layout_constraintTop_toTopOf="@id/icVillaContacts"
+                app:layout_constraintBottom_toBottomOf="@id/icVillaContacts"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="10dp"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/btnClose"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:src="@drawable/ic_close"
+            android:padding="10dp"
+            android:background="@drawable/background_blur"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btnSave"
+            android:layout_marginEnd="10dp"/>
+
+        <com.makeramen.roundedimageview.RoundedImageView
+            android:id="@+id/btnSave"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:src="@drawable/ic_save"
+            android:padding="10dp"
+            android:background="@drawable/background_blur"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+
+</eightbitlab.com.blurview.BlurView>
