--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,5 @@
 
     <color name="colorPrimary">#0D47A1</color> <color name="colorPrimaryDark">#002171</color>
     <color name="colorAccent">#42A5F5</color> <color name="colorSecondary">#2196F3</color> <color name="cardBackground">#FFFFFF</color> <color name="textColorPrimary">#212121</color>
-    <color name="textColorSecondary">#757575</color>
+    <color name="textColorSecondary">#A8A7A7</color>
 </resources>
