--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,11 +46,11 @@
                 android:id="@+id/toolbar_button_layout">
 
                 <com.makeramen.roundedimageview.RoundedImageView
-                    android:id="@+id/btnFilter"
+                    android:id="@+id/btn_search"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
-                    android:contentDescription="Filtrele"
-                    android:src="@drawable/ic_filter"
+                    android:contentDescription="Ara"
+                    android:src="@drawable/ic_search"
                     android:padding="10dp"
                     android:layout_marginEnd="5dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -69,7 +69,46 @@
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent" />
 
+                <com.makeramen.roundedimageview.RoundedImageView
+                    android:id="@+id/btnCancel"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:contentDescription="İptal"
+                    android:src="@drawable/ic_close"
+                    android:padding="10dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:visibility="gone"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </eightbitlab.com.blurview.BlurView>
+
+        <eightbitlab.com.blurview.BlurView
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/blur_toolbar_buttons"
+            android:id="@+id/blur_searchbox"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/background_edittext"
+            android:visibility="gone">
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/etSearch"
+                android:background="@android:color/transparent"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:hint="Villa Ara"
+                android:textColorHint="@color/white"
+                android:drawableStart="@drawable/ic_search"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"/>
 
         </eightbitlab.com.blurview.BlurView>
 
@@ -128,7 +167,7 @@
         <eightbitlab.com.blurview.BlurView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/blur_search_button"
+            android:id="@+id/blur_fab"
             android:background="@drawable/background_blur"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -138,8 +177,8 @@
             <com.makeramen.roundedimageview.RoundedImageView
                 android:layout_width="62dp"
                 android:layout_height="62dp"
-                android:id="@+id/ic_search"
-                android:src="@drawable/ic_search"
+                android:id="@+id/ic_fab"
+                android:src="@drawable/ic_filter"
                 android:padding="10dp"/>
 
         </eightbitlab.com.blurview.BlurView>
@@ -152,157 +191,18 @@
             app:layout_constraintTop_toBottomOf="@id/blur_message"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/blur_search_button">
+            app:layout_constraintEnd_toStartOf="@id/blur_fab">
 
-            <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="7dp"
-                android:paddingEnd="7dp"
-                android:scrollbars="none">
-
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="62dp"
-                    android:paddingTop="7dp"
-                    android:paddingBottom="7dp">
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:id="@+id/tab_villas"
-                        android:background="@drawable/background_blur"
-                        android:padding="5dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent">
-
-                        <com.makeramen.roundedimageview.RoundedImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/icon_villa"
-                            android:src="@drawable/ic_home"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/title_villas"
-                            android:text="Villa Listesi"
-                            android:textColor="@color/white"
-                            app:layout_constraintTop_toBottomOf="@id/icon_villa"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginStart="7dp"
-                            android:layout_marginEnd="7dp"/>
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:id="@+id/tab_cargos"
-                        android:padding="5dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/tab_villas">
-
-                        <com.makeramen.roundedimageview.RoundedImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/icon_cargo"
-                            android:src="@drawable/ic_cargo"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/title_cargos"
-                            android:text="Kargo Listesi"
-                            android:textColor="@color/white"
-                            app:layout_constraintTop_toBottomOf="@id/icon_cargo"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginStart="7dp"
-                            android:layout_marginEnd="7dp"/>
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:id="@+id/tab_contacts"
-                        android:padding="5dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/tab_cargos">
-
-                        <com.makeramen.roundedimageview.RoundedImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/icon_contacts"
-                            android:src="@drawable/ic_person"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/title_contacts"
-                            android:text="Kişi Listesi"
-                            android:textColor="@color/white"
-                            app:layout_constraintTop_toBottomOf="@id/icon_contacts"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginStart="7dp"
-                            android:layout_marginEnd="7dp"/>
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:id="@+id/tab_cameras"
-                        android:padding="5dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/tab_contacts">
-
-                        <com.makeramen.roundedimageview.RoundedImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/icon_cameras"
-                            android:src="@drawable/ic_videocam"
-                            app:layout_constraintTop_toTopOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"/>
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/title_cameras"
-                            android:text="Kamera Listesi"
-                            android:textColor="@color/white"
-                            app:layout_constraintTop_toBottomOf="@id/icon_cameras"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            android:layout_marginStart="7dp"
-                            android:layout_marginEnd="7dp"/>
-
-                    </androidx.constraintlayout.widget.ConstraintLayout>
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </HorizontalScrollView>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rvMainTabs"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                android:padding="7dp"
+                android:clipToPadding="false"
+                android:scrollbars="none"
+                tools:listitem="@layout/item_main_tab" />
 
         </eightbitlab.com.blurview.BlurView>
 
