--- a/app/src/main/res/layout/fragment_cargo.xml
+++ b/app/src/main/res/layout/fragment_cargo.xml
@@ -4,4 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.fragments.CargoFragment"/>
+    tools:context=".views.fragments.CargoFragment"
+    android:id="@+id/rvCargoCompanies"/>
