--- a/app/src/main/res/layout/fragment_villa.xml
+++ b/app/src/main/res/layout/fragment_villa.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:paddingStart="12dp"
-    android:paddingEnd="12dp"
-    tools:context=".views.fragments.VillaFragment"
-    app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
-    app:spanCount="2"
-    tools:listitem="@layout/item_villa"
-    android:id="@+id/recyclerView"/>
+    android:id="@+id/swipe_refresh_layout"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingStart="12dp"
+        android:paddingEnd="12dp"
+        tools:context=".views.fragments.VillaFragment"
+        app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
+        app:spanCount="2"
+        tools:listitem="@layout/item_villa"
+        android:id="@+id/recyclerView"/>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
