--- a/app/src/main/res/layout/item_cargo_company.xml
+++ b/app/src/main/res/layout/item_cargo_company.xml
@@ -6,7 +6,9 @@
     android:layout_height="wrap_content"
     android:background="@drawable/background_blur"
     android:padding="16dp"
-    android:layout_marginBottom="8dp">
+    android:layout_marginBottom="8dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="16dp">
 
     <TextView
         android:id="@+id/tvCargoCompanyName"
