--- a/app/src/main/res/layout/item_villa.xml
+++ b/app/src/main/res/layout/item_villa.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<eightbitlab.com.blurview.BlurView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -11,34 +11,40 @@
     android:layout_marginStart="4dp"
     android:layout_marginEnd="4dp">
 
-    <TextView
-        android:id="@+id/tvVillaNo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="20sp"
-        android:textColor="@color/white"
-        tools:text="1"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvVillaOwnerName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:textColor="@color/white"
-        android:layout_marginStart="8dp"
-        android:maxLines="1"
-        android:ellipsize="marquee"
-        tools:text="Ahmet Yılmaz"
-        app:layout_constraintTop_toTopOf="@+id/tvVillaNo"
-        app:layout_constraintStart_toEndOf="@+id/tvVillaNo"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="@+id/tvVillaNo" />
+        <TextView
+            android:id="@+id/tvVillaNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="20sp"
+            android:textColor="@color/white"
+            tools:text="1"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/tvVillaOwnerName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textColor="@color/white"
+            android:layout_marginStart="8dp"
+            android:maxLines="1"
+            android:ellipsize="marquee"
+            tools:text="Ahmet Yılmaz"
+            app:layout_constraintTop_toTopOf="@+id/tvVillaNo"
+            app:layout_constraintStart_toEndOf="@+id/tvVillaNo"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tvVillaNo" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</eightbitlab.com.blurview.BlurView>
